Fix About page Alignment

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   margin-left: 5%;
   margin-right: 5%;
   gap: 4rem;
+  align-items: center;
 }
 
 
